<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="authButtonListener"
            type="com.example.auth.presentation.log_in.callbacks.IAuthButtonListener" />
    </data>

    <util.BacgroundLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/auth_background"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.AuthTextInputField"
            android:id="@+id/usernameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/emailSingUpTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/email"
            android:hint="@string/username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailSingUpTextInputLayout"
            style="@style/Theme.AuthTextInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/passwordSingUpTextInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/email"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.AuthTextInputField"
            android:id="@+id/passwordSingUpTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/confirmPasswordTextInputLayout"

            app:startIconDrawable="@drawable/password"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.AuthTextInputField"
            android:id="@+id/confirmPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/password"
            android:hint="@string/confirmPassword">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            style="@style/AuthButton"
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/changeToLogInButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/auth_button"
            android:text="@string/signUpButton"
            android:enabled="false"/>

        <com.google.android.material.button.MaterialButton
            style="@style/AuthChangeAuthMethod"
            android:id="@+id/changeToLogInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/logInInstead"
            android:layout_marginBottom="50dp"
            />
    </util.BacgroundLayout>
</layout>